# nanoOS2

./: .gitignore  CMakeLists.txt  README.md  documentation.md  nanoOS2.rar  partitions.csv  sdkconfig  sdkconfig copy  sdkconfig.defaults  sdkconfig.old
data/fonts/: font4x5.fnt
drivers/: base.h  keyboard_joystick.c  keyboard_matrix.c  keyboard_simple.c  leds_luat_esp32c3.c  leds_simple.c  screen_SPFD5408.c  screen_ST7735.c  screen_air101.c  screen_nokia5110.c
drivers/base/: screen_template.h
filesystem/storage/: init.lua
filesystem/storage/apps/: main.lua  test.lua
filesystem/storage/cave/: 0
filesystem/storage/cave/levels/: 0  1  2  3
filesystem/storage/libs/: font.lua  fs.lua  gui.lua  pkg.lua
main/: CMakeLists.txt  all.h  color.c  color.h  control.c  control.h  customshell.c  customshell.h  device.c  device.h  filesystem.c  filesystem.h  fs.c  fs.h  ftp.c  ftp.h  functions.c  functions.h  gfx.c  gfx.h  graphic.c  graphic.h  gui.c  gui.h  hardware.c  hardware.h  lua.c  lua.h  main.c  main.h  math.c  math.h  nvs.c  nvs.h  palette.h  profile.h  shell.c  storage.c  storage.h  str.h  (+13 more)
main/apps/: explorer.c  explorer.h  keyboardtest.c  lua.c  lua.h  pkg.c  pkg.h  screentest.c  screentest.h  settings.c  settings.h  shell.c  shell.h  viewer.c  viewer.h
main/drivers/: keyboard.h  keyboard_matrix.c  leds.h  screen.h  screen_nokia5110.c
main/drivers/stubs/: keyboard.c  leds.c  screen.c
main/drivers/stubs/keyboard/: getActionsCount.c  init.c  isActionButton.c  isChar.c  isCharSupport.c  isEnter.c  isEnterSupport.c  isEsc.c  isEscSupport.c  isMoveButton.c  isMoveSupport.c
main/drivers/stubs/leds/: getCount.c  init.c  isColored.c  setColor.c
main/drivers/stubs/screen/: get.c  getColormode.c  init.c  set.c  setBacklightValue.c  update.c  xy.c
main/games/: cave.c  cave.h  pong.c  pong.h  snake.c  snake.h
main/hidden_tools/: lua.c  lua.h  pkg.c  pkg.h  viewer.c  viewer.h
main/service/: lua_binder.h  lua_binds.h
main/tests/: keyboardtest.c  keyboardtest.h  screentest.c  test_gui.c  test_gui.h  test_keyboard.c  test_screen.c
other/: font_compiller.lua
profiles/: current.txt
profiles/debug_air101/: define.h  drivers.h  drivers.txt
profiles/debug_air101/drivers/: screen_custom_driver_test.c
profiles/debug_air101/filesystem/storage/data/files/: gfx_test.lua  gfxtest.lua  test.lua
profiles/debug_air101_images/: define.h  drivers.h
profiles/devboard_air101/: define.h  drivers.h  drivers.txt
profiles/devboard_esp32_spfd5408/: define.h  drivers.h  drivers.txt  info.txt
profiles/devboard_matrix_nokia/: define.h  drivers.h  drivers.txt
profiles/example_air101_customshell/: define.h  drivers.h  shell.c
profiles/template/: define.h  drivers.h  drivers.txt
profiles/test_KMR1441_SPI_V2/: define.h  drivers.h  drivers.txt  info.txt  shell.c
tools/: bin.txt  font_compiller.lua
tools/font_compiller/: font_compiller.lua
tools/font_compiller/fonts/: font4x5.lua
tools/generate_binds/: generate_binds.lua
tools/generate_binds/binds/: hook  print  wait
